# Ros2_Collision_Warning

map_manager_denm_scripts/: setup.py
map_manager_denm_scripts/map_manager_denm_scripts/: Collision_Warning_CPM.py
ros2_collision_detection/: CMakeLists.txt  package.xml  ttc_algorithm_plugins.xml
ros2_collision_detection/include/ros2_collision_detection/: circle_algorithm.hpp  circle_equation_solver.hpp  enum_result_type.hpp  n_circle_algorithm.hpp  ros2_collision_detection__node.hpp  ttc_algorithm.h  ttc_algorithm.hpp  ttc_calculator.hpp  ttc_only_warning_algorithm.hpp  warning_generator.hpp  warning_generator_algorithm.hpp
ros2_collision_detection/src/: collision_detection.cpp  ros2_collision_detection__node.cpp  ttc_algorithm_plugins.cpp  ttc_calculator.cpp  ttc_only_warning_algorithm.cpp  warning_generator.cpp
ros2_collision_detection_plugins/: CMakeLists.txt  package.xml  ttc_algorithm_plugins.xml  warning_generator_algorithm_plugins.xml
ros2_collision_detection_plugins/include/ros2_collision_detection_plugins/: ttc_algorithm_plugins.hpp  visibility_control.h
ros2_collision_detection_plugins/src/: circle_algorithm.cpp  circle_equation_solver.cpp  n_circle_algorithm.cpp  ttc_algorithm_plugins.cpp  warning_generator_algorithm_plugins.cpp
ttc_algorithm/: CMakeLists.txt  package.xml
ttc_algorithm/src/: ttc_algorithm_node.cpp
v2xvf_interfaces/: CMakeLists.txt
v2xvf_interfaces/msg/: Header.msg
v2xvf_interfaces/msg/Collision_warning/: PerceivedObjects.msg  SubjectVehicleMotion.msg
